maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:61: error: not found: value hasBottomWall
      if (hasBottomWall(x, y)) return min;
          ^ShortestPathMaze:65: error: not found: value hasRightWall
      if (hasRightWall(x, y)) return min;
          ^